--- a/deno.json
+++ b/deno.json
@@ -3,8 +3,10 @@
 	"version": "0.0.1",
 	"license": "MIT",
 	"exports": {
+		"./services": "./src/services/index.ts",
 		"./components": "./src/components/index.ts",
-		"./services": "./src/services/index.ts"
+		"./components/security": "./src/components/security/index.ts",
+		"./components/table": "./src/components/table/index.ts"
 	},
 	"compilerOptions": {
 		"lib": ["deno.ns", "dom"]
