--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
 	},
 	"dependencies": {
 		"@lit/task": "^1.0.1",
+		"ejs": "^3.1.10",
 		"lit": "^3.2.1",
 		"nunjucks": "^3.2.4"
 	},
 	"devDependencies": {
+    "@types/ejs": "^3.1.5",
 		"@types/nunjucks": "^3.2.6",
 	}
 }
