--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
 	"type": "module",
-	"scripts": {
-	},
+	"scripts": {},
 	"dependencies": {
 		"@lit/task": "^1.0.1",
 		"ejs": "^3.1.10",
 		"lit": "^3.2.1",
-		"nunjucks": "^3.2.4"
+		"nunjucks": "^3.2.4",
+		"surrealdb": "^1.0.6"
 	},
 	"devDependencies": {
+		"@rsbuild/core": "^1.0.19",
 		"@types/ejs": "^3.1.5",
 		"@types/nunjucks": "^3.2.6"
 	}
