--- a/deno.json
+++ b/deno.json
@@ -3,37 +3,25 @@
 	"version": "0.0.1",
 	"license": "MIT",
 	"tasks": {
-		"exam:auth": "deno run --watch --allow-net --allow-read ./_examples/auth/01.ts",
-		"exam:db": "deno run --watch --allow-net --allow-read ./_examples/database/01.ts"
-	},
-	"imports": {
-		"$services": "./src/services/index.ts",
-		"$services/database": "./src/services/database/index.ts",
-		"$services/theming": "./src/services/theming/index.ts",
-		"$services/auth": "./src/services/auth/index.ts",
-		"$components": "./src/components/index.ts",
-		"$components/security": "./src/components/security/index.ts",
-		"$components/database": "./src/components/database/index.ts"
+		"exam:auth": "deno run --allow-net --allow-read --watch ./examples/auth/01.ts",
+		"exam:db": "deno run --allow-net --allow-read --watch ./examples/database/01.ts"
 	},
 	"exports": {
-		"./services": "./src/services/index.ts",
-		"./services/database": "./src/services/database//index.ts",
+		"./components/security": "./src/components/security/index.ts",
+		"./components/database": "./src/components/database/index.ts",
+		"./components": "./src/components/index.ts",
+		"./services/database": "./src/services/database/index.ts",
 		"./services/theming": "./src/services/theming/index.ts",
 		"./services/auth": "./src/services/auth/index.ts",
-		"./components": "./src/components/index.ts",
-		"./components/security": "./src/components/security/index.ts",
-		"./components/database": "./src/components/database/index.ts"
+		"./services": "./src/services/index.ts",
+		"./types": "./src/types/index.ts"
 	},
-	"compilerOptions": {
-		"lib": ["deno.ns", "dom"]
-	},
-	"lock": false,
 	"fmt": {
 		"useTabs": true,
 		"lineWidth": 96,
 		"indentWidth": 4,
 		"semiColons": true,
-		"singleQuote": true,
+		"singleQuote": false,
 		"exclude": ["./dist", "./_dev/public/template.html"]
 	}
 }
