--- a/deno.json
+++ b/deno.json
@@ -16,6 +16,9 @@
 		"./services": "./src/services/index.ts",
 		"./types": "./src/types/index.ts"
 	},
+	"compilerOptions": {
+		"lib": ["deno.ns", "dom"]
+	},
 	"fmt": {
 		"useTabs": true,
 		"lineWidth": 96,
