--- a/.github/workflows/publish_jsr.yml
+++ b/.github/workflows/publish_jsr.yml
@@ -5,7 +5,7 @@ on:
       - "v*"
 
 jobs:
-  publish:
+  publish_jsr:
     runs-on: ubuntu-latest
 
     permissions:
@@ -24,3 +24,33 @@ jobs:
 
       - name: Publish package
         run: deno publish
+
+  publish_npm:
+    runs-on: ubuntu-latest
+    needs: [publish_jsr]
+
+    permissions:
+      contents: read
+      id-token: write
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: denoland/setup-deno@v2
+        with:
+          deno-version: v2.x
+
+      - name: Install dependencies
+        run: deno install
+
+      - name: Build
+        run: deno run -A scripts/build_npm.ts
+
+      - name: Install npm
+        run: sudo apt update && sudo apt install -y nodejs
+
+      - name: Npm version
+        run: npm --version
+
+      # - name: Publish package
+      #   run: npm publish --access public npm
