Revert "FIX(workflows)"
This reverts commit 1ccb2dcf0c6008d559c150f19ea3921d863eee35.

--- a/.github/workflows/publish_jsr.yml
+++ b/.github/workflows/publish_jsr.yml
@@ -1,10 +1,8 @@
-name: Publish packages
+name: Publish to JSR
 on:
   push:
     tags:
       - "v*"
-
-  workflow_dispatch:
 
 jobs:
   publish_jsr:
@@ -42,8 +40,8 @@ jobs:
         with:
           deno-version: v2.x
 
-      - name: Install dependencies
-        run: deno install --node-modules-dir=auto
+      # - name: Install dependencies
+      #   run: deno install
 
       - name: Build
         run: deno run -A scripts/build_npm.ts
@@ -53,9 +51,6 @@ jobs:
 
       - name: Npm version
         run: npm --version
-
-      - name: Debug - list content
-        run: ls -l npm
 
       # - name: Publish package
       #   run: npm publish --access public npm
