--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
 	"scripts": {},
 	"dependencies": {
 		"@lit/task": "^1.0.1",
+		"@types/nunjucks": "^3.2.6",
 		"ejs": "^3.1.10",
 		"lit": "^3.2.1",
 		"nunjucks": "^3.2.4",
 		"surrealdb": "^1.3.2"
 	},
 	"devDependencies": {
-		"@types/ejs": "^3.1.5",
-		"@types/nunjucks": "^3.2.6"
+		"@types/ejs": "^3.1.5"
 	}
 }
