--- a/.github/workflows/publish_jsr.yml
+++ b/.github/workflows/publish_jsr.yml
@@ -46,11 +46,17 @@ jobs:
       - name: Build
         run: deno run -A scripts/build_npm.ts
 
-      - name: Install npm
-        run: sudo apt update && sudo apt install -y nodejs
+      # - name: Install npm
+      #   run: sudo apt update && sudo apt install -y nodejs
+      #
+      # - name: Npm version
+      #   run: npm --version
 
-      - name: Npm version
-        run: npm --version
+      - uses: actions/setup-node@4
+        with:
+          node-version: 20
 
-      - name: Publish package
-        run: npm publish --access public npm
+      - run: npm ci
+      - run: npm publish --provenance --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
