--- a/.github/workflows/publish_jsr.yml
+++ b/.github/workflows/publish_jsr.yml
@@ -47,16 +47,8 @@ jobs:
         run: deno run -A scripts/build_npm.ts
       - run: cd npm
 
-      # - name: Install npm
-      #   run: sudo apt update && sudo apt install -y nodejs
-      #
-      # - name: Npm version
-      #   run: npm --version
-
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
+      - run: echo $PWD
+      - run: ls -l
 
       - run: npm ci
       - run: npm publish --provenance --access public
