--- a/.github/workflows/publish_jsr.yml
+++ b/.github/workflows/publish_jsr.yml
@@ -5,25 +5,25 @@ on:
       - "v*"
 
 jobs:
-  # publish_jsr:
-  #   runs-on: ubuntu-latest
-  #
-  #   permissions:
-  #     contents: read
-  #     id-token: write
-  #
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #
-  #     - uses: denoland/setup-deno@v2
-  #       with:
-  #         deno-version: v2.x
-  #
-  #     - name: Install dependencies
-  #       run: deno install
-  #
-  #     - name: Publish package
-  #       run: deno publish
+  publish_jsr:
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      id-token: write
+
+    steps:
+      - uses: actions/checkout@v4
+
+      # - uses: denoland/setup-deno@v2
+      #   with:
+      #     deno-version: v2.x
+      #
+      # - name: Install dependencies
+      #   run: deno install
+      #
+      # - name: Publish package
+      #   run: deno publish
 
   publish_npm:
     runs-on: ubuntu-latest
