--- a/.github/workflows/publish_packages.yml
+++ b/.github/workflows/publish_packages.yml
@@ -15,19 +15,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # - uses: denoland/setup-deno@v2
-      #   with:
-      #     deno-version: v2.x
-      #
-      # - name: Install dependencies
-      #   run: deno install
-      #
-      # - name: Jsr Publish package
-      #   run: deno publish
+      - uses: denoland/setup-deno@v2
+        with:
+          deno-version: v2.x
+
+      - name: Install dependencies
+        run: deno install
+
+      - name: Jsr Publish package
+        run: deno publish
 
   publish_npm:
     runs-on: ubuntu-latest
-    needs: [publish_jsr]
 
     permissions:
       contents: read
@@ -39,9 +38,6 @@ jobs:
       - uses: denoland/setup-deno@v2
         with:
           deno-version: v2.x
-
-      # - name: Install dependencies
-      #   run: deno install
 
       - name: Deno build npm
         run: deno run -A scripts/build_npm.ts
